# VRG3D

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  READ_ME.txt
G3D/: CMakeLists.txt  CMakeLists.txt~  buildg3d
G3D/G3D.lib/include/G3D/: System.h  g3dmath.h
G3D/G3D.lib/source/: CoordinateFrame.cpp  GImage_png.cpp  RegistryUtil.cpp  System.cpp
G3D/GLG3D.lib/: CMakeLists.txt
G3D/GLG3D.lib/source/: CocoaWindow.mm  MD2Model.cpp  OSWindow.cpp  VideoInput.cpp  VideoOutput.cpp  Win32Window.cpp
G3D/mongoose.lib/include/: mongoose.h
G3D/mongoose.lib/source/: mongoose.c
G3D/png.lib/: CMakeLists.txt
G3D/tiff.lib/source/: t4.h  tif_codec.c  tif_dirread.c  tif_dirwrite.c  tif_dumpmode.c  tif_extension.c  tif_jpeg.c  tif_luv.c  tif_lzw.c  tif_next.c  tif_ojpeg.c  tif_packbits.c  tif_predict.c  tif_print.c  tif_swab.c  tif_warning.c  tif_win32.c  tif_zip.c  tiffiop.h
G3D/zlib.lib/include/: zconf.h
G3D/zlib.lib/source/: adler32.c  deflate.c  trees.c  uncompr.c  zutil.h
branches/g3d-8.0-64ffmpeg-win/: CMakeLists.txt
branches/g3d-8.0-64ffmpeg-win/CMakeModules/: findlibzip.cmake
branches/g3d-8.0-64ffmpeg-win/G3D.lib/: CMakeLists.txt
branches/g3d-8.0-64ffmpeg-win/G3D.lib/include/G3D/: g3dmath.h  platform.h
branches/g3d-8.0-64ffmpeg-win/G3D.lib/source/: GImage_png.cpp  RegistryUtil.cpp  g3dfnmatch.cpp  prompt.cpp  uint128.cpp
branches/g3d-8.0-64ffmpeg-win/GLG3D.lib/include/GLG3D/: GLG3D.h  VideoInput.h  VideoOutput.h
branches/g3d-8.0-64ffmpeg-win/GLG3D.lib/source/: CameraControlWindow.cpp  CarbonWindow.cpp  VideoInput.cpp  VideoOutput.cpp
branches/g3d-8.0-64ffmpeg-win/ffmpeg/include/libavutil/: common.h
branches/g3d-8.0-64ffmpeg-win/ffmpeg/lib/win64/: avcodec.lib  avformat.lib  avutil.lib  swscale.lib
branches/g3d-8.0-64ffmpeg-win/jpeg.lib/: CMakeLists.txt
branches/g3d-8.0-64ffmpeg-win/mongoose.lib/: CMakeLists.txt
branches/g3d-8.0-64ffmpeg-win/mongoose.lib/include/: mongoose.h
branches/g3d-8.0-64ffmpeg-win/mongoose.lib/source/: mongoose.c
branches/g3d-8.0-64ffmpeg-win/tiff.lib/: CMakeLists.txt
branches/g3d-8.0-64ffmpeg-win/tiff.lib/include/: tiff.h  tiffconf.wince.h
branches/g3d-8.0-64ffmpeg-win/tiff.lib/source/: SConstruct  mkg3states.c  tif_aux.c  tif_close.c  tif_color.c  tif_compress.c  tif_config.wince.h  tif_dir.c  tif_dir.h  tif_dirinfo.c  tif_error.c  tif_fax3.c  tif_fax3.h  tif_flush.c  tif_getimage.c  tif_jbig.c  tif_open.c  tif_pixarlog.c  tif_predict.h  tif_read.c  tif_stream.cxx  tif_strip.c  tif_thunder.c  tif_tile.c  tif_unix.c  tif_version.c  tif_write.c  tiffio.h  tiffio.hxx
branches/g3d-8.0-64ffmpeg-win/tools/gfxmeter/: ice.txt
branches/g3d-8.0-64ffmpeg-win/tools/gfxmeter/source/: speed.cpp
branches/g3d-8.0-64ffmpeg-win/zip.lib/: CMakeLists.txt
branches/g3d-8.0-64ffmpeg-win/zlib.lib/: CMakeLists.txt
branches/g3d-8.0-64ffmpeg-win/zlib.lib/source/: compress.c  crc32.c  deflate.h  zutil.c
cmake/Modules/: FindLibG3D.cmake  FindLibGLUT.cmake  FindLibOMNIMAP.cmake  FindLibPQLABS.cmake  FindLibSDL.cmake  FindLibSPACENAV.cmake  FindLibTrackD.cmake  FindLibVRPN.cmake
demo/: CMakeLists.txt  vrg3d_demo.cpp
example/: Makefile  VRShaderExample.cpp  VRShaderExample.h  depthshader.geom  passthroughshader.frag  passthroughshader.geom  passthroughshader.vert  shader.frag  shader.geom  shader.vert
server/: CMakeLists.txt  Makefile  vrg3d_server.cpp
share/vrsetup/: desktopOmnimap.vrsetup  multitouch-zspace-client.vrsetup  vertical-zspace-client.vrsetup
utility_windows/: READ_ME.txt
vrbase/: CMakeLists.txt  CommonInc.H  ConfigVal.H  ConfigVal.cpp  CovarianceMatrix.H  CovarianceMatrix.cpp  DefaultMouseNav.H  DefaultMouseNav.cpp  Doxyfile  EventFilter.H  EventMgr.H  EventMgr.cpp  Fsa.H  Fsa.cpp  FsaHelper.H  FsaHelper.cpp  GfxMgr.H  GfxMgr.cpp  GfxMgrCallbacks.H  HaloLineSet.H  HaloLineSet.cpp  LoadingScreen.H  LoadingScreen.cpp  Markers.H  ObjParser.H  ObjParser.cpp  PlyParser.H  PlyParser.cpp  SMesh.H  SMesh.cpp  Shadows.H  Shadows.cpp  Simple3DAudioClient.H  Simple3DAudioClient.cpp  SpaceNavHCI.H  SpaceNavHCI.cpp  StringUtils.H  StringUtils.cpp  TexPerFrameSMesh.H  TexPerFrameSMesh.cpp  (+19 more)
vrbase/haloShaders/: shader.frag  shader.vert
vrg3d/: CMakeLists.txt  CheckerboardStencil.cpp  ConfigMap.cpp  DisplayTile.cpp  Doxyfile  Doxyfile.local  Event.cpp  G3DOperators.cpp  GlutWindow.cpp  HorizontalStencil.cpp  HorizontalStencil.h  ICubeXDevice.cpp  ISenseDirect.cpp  InputDevice.cpp  Makefile  Midi.cpp  Midi_linux.cpp  Midi_win32.cpp  MouseToTracker.cpp  PQLabsEvents.cpp  PQLabsEvents.h  ProjectionVRCamera.cpp  SpaceNavDevice.cpp  SpaceNavDevice_linux.cpp  SpaceNavDevice_osx.cpp  SpaceNavDevice_win32.cpp  SynchedSystem.cpp  TUIOEvents.cpp  TrackDClient.cpp  VRApp.cpp  VRApp.h  VRApp_linux.cpp  VRApp_network.cpp  VRApp_osx.cpp  VRApp_win32.cpp  VRPNAnalogDevice.cpp  VRPNButtonDevice.cpp  VRPNTrackerDevice.cpp  common.make  configure.make  (+5 more)
vrg3d/stale/: OSXWindow.cpp  OSXWindow.h  SpaceNavDevice_snow.cpp  VRApp_cluster.cpp  VRApp_vrpn.cpp  g3d_SDLWindow.cpp  g3d_SDLWindow.h
